--- a/FinanceTrackerApp/Components/Layout/NavMenu.razor
+++ b/FinanceTrackerApp/Components/Layout/NavMenu.razor
@@ -33,6 +33,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="budget">
+                <span class="bi bi-graph-up-nav-menu" aria-hidden="true"></span> Budget
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="login">Login</NavLink>
         </div>
         <div class="nav-item px-3">
