--- a/FinanceTrackerApp/Components/Layout/MainLayout.razor
+++ b/FinanceTrackerApp/Components/Layout/MainLayout.razor
@@ -1,5 +1,6 @@
-﻿@inherits LayoutComponentBase
+@inherits LayoutComponentBase
 
 <AppShell>
     @Body
 </AppShell>
+<FinanceTrackerApp.Components.Shared.Toast />
