Revert "Fig dev"

--- a/FinanceTrackerApp/Components/Layout/MainLayout.razor
+++ b/FinanceTrackerApp/Components/Layout/MainLayout.razor
@@ -1,6 +1,5 @@
-@inherits LayoutComponentBase
+﻿@inherits LayoutComponentBase
 
 <AppShell>
     @Body
 </AppShell>
-<FinanceTrackerApp.Components.Shared.Toast />
